# Game-Rust-ASM

./: Cargo.toml  LICENSE  README.md  build.rs
asm/core/: timing.asm
asm/math/: fixed_point.asm  simd_vec.asm
asm/physics/: collision.asm  integration.asm
asm/render/: raycast.asm
games/fighting/: game.rs  main.rs
games/massive_sim/: game.rs  main.rs
games/physics_2d/: game.rs  main.rs
games/raycaster/: game.rs  main.rs
src/: lib.rs
src/audio/: mod.rs
src/core/: game_loop.rs  mod.rs  profiler.rs  timing.rs
src/ecs/: components.rs  mod.rs  systems.rs
src/input/: mod.rs
src/math/: fixed_point.rs  mod.rs  simd.rs  vec2.rs
src/physics/: broad_phase.rs  collision.rs  integration.rs  mod.rs
src/render/: mod.rs  raycast.rs  software.rs
